--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#00BCD4</color>
+    <color name="colorPrimaryLight">#B2EBF2</color>
     <color name="colorPrimaryDark">#0083BF</color>
     <color name="colorAccent">#FF3D00</color>
+    <color name="colorPrimaryDifferent">#FF3D00</color>
     <color name="colorWhiteShade">#FFFFFF</color>
     <color name="colorBlackShade">#474747</color>
     <color name="colorBlackShade2">#7F7F7F</color>
