--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -16,12 +16,15 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="120sp"
+            android:background="@color/colorBlackShade3"
             android:id="@+id/imageView"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="LIGHT"
+            android:textColor="@color/colorWhiteShade"
+            android:background="@color/colorBlackShade"
             android:gravity="center"
             android:padding="4sp"
             android:id="@+id/textView"/>
