--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
+<android.support.v7.widget.CardView android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_margin="4sp"
-    android:id="@+id/cardView">
+    app:cardCornerRadius="4sp"
+    android:id="@+id/cardView"
+    android:clickable="false">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:clickable="true"
         android:background="@drawable/card_background">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="120sp"
-            android:background="@color/colorBlackShade3"
             android:id="@+id/imageView"/>
 
         <TextView
