--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -13,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:clickable="true"
         android:background="@drawable/card_background">
 
         <ImageView
@@ -26,7 +25,7 @@
             android:layout_height="match_parent"
             android:text="LIGHT"
             android:textColor="@color/colorWhiteShade"
-            android:background="@color/colorBlackShade"
+            android:background="@color/colorPrimary"
             android:gravity="center"
             android:padding="4sp"
             android:id="@+id/textView"/>
