--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -18,14 +18,14 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="120sp"
-            android:id="@+id/imageView"/>
+            android:id="@+id/imageView"
+            android:padding="10sp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="LIGHT"
-            android:textColor="@color/colorWhiteShade"
-            android:background="@color/colorPrimary"
+            android:textColor="@color/colorBlackShade2"
             android:gravity="center"
             android:padding="4sp"
             android:id="@+id/textView"/>
