--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/card_background">
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="120sp"
             android:id="@+id/imageView"
             android:padding="10sp"/>
