--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -54,6 +54,9 @@
             android:elevation="@dimen/app_bar_elevation"
             android:layout_weight="1"
             android:padding="5sp"
+            android:textSize="15sp"
+            android:fontFamily="sans-serif-smallcaps"
+            android:textStyle="bold"
             android:gravity="center"
             android:textColor="@color/colorBlackShade"
             android:layout_margin="10sp"
