--- a/app/src/main/res/layout-land/activity_camera.xml
+++ b/app/src/main/res/layout-land/activity_camera.xml
@@ -72,6 +72,20 @@
             app:cardElevation="@dimen/app_bar_elevation"
             app:cardCornerRadius="5sp">
 
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <GridLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+
+
+                </GridLayout>
+
+            </ScrollView>
+
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
