--- a/app/src/main/res/layout/activity_gsm.xml
+++ b/app/src/main/res/layout/activity_gsm.xml
@@ -73,6 +73,21 @@
         android:layout_margin="10sp"
         android:layout_below="@+id/ll">
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="2">
+
+
+
+            </GridLayout>
+
+        </ScrollView>
+
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
