--- a/app/src/main/res/layout/activity_battery.xml
+++ b/app/src/main/res/layout/activity_battery.xml
@@ -82,11 +82,17 @@
                 android:layout_height="wrap_content"
                 android:columnCount="2">
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/imagee"/>
+
 
             </GridLayout>
 
         </ScrollView>
 
     </android.support.v7.widget.CardView>
+
 
 </RelativeLayout>
