--- a/app/src/main/res/layout/activity_battery.xml
+++ b/app/src/main/res/layout/activity_battery.xml
@@ -38,31 +38,6 @@
         android:id="@+id/ll"
         android:layout_below="@+id/toolbar">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="0sp"
-            android:layout_height="150sp"
-            android:elevation="@dimen/app_bar_elevation"
-            android:layout_weight="1"
-            android:background="@color/colorPrimaryLight"
-            android:layout_margin="10sp"/>
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="0sp"
-            android:layout_height="match_parent"
-            android:elevation="@dimen/app_bar_elevation"
-            android:layout_weight="1"
-            android:padding="5sp"
-            android:textSize="15sp"
-            android:fontFamily="sans-serif-smallcaps"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:textColor="@color/colorBlackShade"
-            android:layout_margin="10sp"
-            android:background="@color/colorPrimaryLight"
-            android:text="SAMPLE DATA"/>
-
     </LinearLayout>
 
     <android.support.v7.widget.CardView
@@ -81,11 +56,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:columnCount="2">
+                <LinearLayout
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:paddingTop="15dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/imagee"/>
+                    <ImageView
+
+                        android:foregroundGravity="center"
+                        android:layout_gravity="center"
+                        android:layout_height="200dp"
+                        android:id="@+id/imagee"
+                        android:layout_width="180dp" />
+
+                </LinearLayout>
+
 
 
             </GridLayout>
