--- a/app/src/main/res/layout/activity_battery.xml
+++ b/app/src/main/res/layout/activity_battery.xml
@@ -56,10 +56,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:columnCount="2">
-                <LinearLayout
+                <RelativeLayout
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
-                    android:orientation="vertical"
                     android:paddingTop="15dp"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp">
@@ -70,9 +69,25 @@
                         android:layout_gravity="center"
                         android:layout_height="200dp"
                         android:id="@+id/imagee"
-                        android:layout_width="180dp" />
+                        android:layout_width="180dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true" />
 
-                </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/batteryperc"
+                        android:layout_marginTop="34dp"
+                        android:textSize="30sp"
+                        android:textStyle="normal|bold"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:visibility="invisible"
+                        android:text=""
+                        android:textColor="@android:color/holo_green_light"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true" />
+
+                </RelativeLayout>
 
 
 
