--- a/app/src/main/res/layout/activity_battery.xml
+++ b/app/src/main/res/layout/activity_battery.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_camera"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -22,14 +23,40 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <FrameLayout
+    <RelativeLayout
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:id="@+id/toolbar2"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:layout_marginTop="?actionBarSize">
+        android:paddingTop="15dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
-    </FrameLayout>
+        <ImageView
+
+            android:foregroundGravity="center"
+            android:layout_gravity="center"
+            android:layout_height="200dp"
+            android:id="@+id/imagee"
+            android:layout_width="180dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/batteryperc"
+            android:layout_marginTop="34dp"
+            android:textSize="30sp"
+            android:textStyle="normal|bold"
+            android:fontFamily="sans-serif-smallcaps"
+            android:visibility="invisible"
+            android:text=""
+            android:textColor="@android:color/holo_green_light"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
+
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,46 +75,171 @@
         android:layout_margin="10sp"
         android:layout_below="@+id/ll">
 
+
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
+
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:columnCount="2">
-                <RelativeLayout
-                    android:layout_height="match_parent"
-                    android:layout_width="match_parent"
-                    android:paddingTop="15dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
+                android:columnCount="3">
 
-                    <ImageView
+                <TextView
+                    android:text="Plugged: "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="0"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
 
-                        android:foregroundGravity="center"
-                        android:layout_gravity="center"
-                        android:layout_height="200dp"
-                        android:id="@+id/imagee"
-                        android:layout_width="180dp"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true" />
+                <TextView
+                    android:id="@+id/plugged"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="0"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/batteryperc"
-                        android:layout_marginTop="34dp"
-                        android:textSize="30sp"
-                        android:textStyle="normal|bold"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:visibility="invisible"
-                        android:text=""
-                        android:textColor="@android:color/holo_green_light"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true" />
+                <TextView
+                    android:text="charge level: "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="1"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
 
-                </RelativeLayout>
+                <TextView
+                    android:id="@+id/level"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="1"/>
+
+                <TextView
+                    android:text="Temperature: "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="2"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
+
+                <TextView
+                    android:id="@+id/temp"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="2"/>
+
+                <TextView
+                    android:text="Status: "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="3"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
+
+                <TextView
+                    android:id="@+id/status"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="3"/>
+
+                <TextView
+                    android:text="Technology: "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="4"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
+
+                <TextView
+                    android:id="@+id/tech"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="4"/>
+
+                <TextView
+                    android:text="Voltage: "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="5"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
+
+                <TextView
+                    android:id="@+id/vol"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="5"/>
+
+                <TextView
+                    android:text="Maximum Charge level: "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="6"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
+
+                <TextView
+                    android:id="@+id/maxcl"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="6"/>
+
+                <TextView
+                    android:text="present: "
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_column="0"
+                    android:layout_row="7"
+                    android:padding="3sp"
+                    android:layout_columnWeight="1"/>
+
+                <TextView
+                    android:id="@+id/present"
+                    android:textColor="#000"
+                    android:text="___"
+                    android:padding="3sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:layout_columnWeight="1"
+                    android:layout_column="1"
+                    android:layout_row="7"/>
+
 
 
 
@@ -98,4 +250,4 @@
     </android.support.v7.widget.CardView>
 
 
-</RelativeLayout>
+</LinearLayout>
