--- a/app/src/main/res/layout/activity_light.xml
+++ b/app/src/main/res/layout/activity_light.xml
@@ -48,7 +48,7 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:src="@drawable/camera"
+                android:src="@drawable/light"
                 android:padding="10sp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
