--- a/app/src/main/res/layout/activity_light.xml
+++ b/app/src/main/res/layout/activity_light.xml
@@ -88,19 +88,74 @@
         app:cardElevation="@dimen/app_bar_elevation"
         app:cardCornerRadius="5sp"
         android:layout_margin="10sp"
-        android:layout_below="@+id/ll">
+        android:layout_below="@+id/ll"
+        app:cardBackgroundColor="@color/colorPrimaryLight">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <GridLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:columnCount="2">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:gravity="center">
 
+                <com.github.yongjhih.mismeter.MisMeter
+                    android:layout_width="200sp"
+                    android:layout_height="200sp"
+                    android:id="@+id/meter"/>
 
-            </GridLayout>
+                <GridLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10sp"
+                    android:layout_marginTop="10sp">
+
+                    <TextView
+                        android:layout_row="0"
+                        android:layout_column="0"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:text="Maximum Reading:"
+                        android:padding="5sp"/>
+
+                    <TextView
+                        android:layout_row="0"
+                        android:layout_column="1"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:id="@+id/maximum"
+                        android:padding="5sp"/>
+
+                    <TextView
+                        android:layout_row="1"
+                        android:layout_column="0"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:text="Current Reading:"
+                        android:padding="5sp"/>
+
+                    <TextView
+                        android:layout_row="1"
+                        android:layout_column="1"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:id="@+id/current"
+                        android:padding="5sp"/>
+
+                </GridLayout>
+
+            </LinearLayout>
 
         </ScrollView>
 
